# Eric_Frank

./: .env.example  .gitignore  AI外贸部.md  README.md  demo说明.md  docker-compose.yml  pyproject.toml  工作日志.md  项目代码落实.md
.claude/skills/b2b-docker-deploy/: SKILL.md
.claude/skills/b2b-frontend-dashboard/: SKILL.md
.claude/skills/b2b-infra-setup/: SKILL.md
.claude/skills/b2b-langgraph-core/: SKILL.md
.claude/skills/b2b-miner-agent/: SKILL.md
.claude/skills/b2b-outreach-agent/: SKILL.md
.claude/skills/b2b-scout-agent/: SKILL.md
.claude/skills/b2b-sdr-agent/: SKILL.md
.claude/skills/b2b-writer-agent/: SKILL.md
.cursor/rules/: communication-style.mdc  uv-package-management.mdc
backend/: .dockerignore  Dockerfile  __init__.py  debug_rag_import.py  demo.py  main.py  requirements.txt
backend/agents/: miner.py  outreach.py  scout.py  sdr.py  writer.py
backend/app/: config.py  db.py  main.py
backend/app/core/: agent.py  context.py  skill_base.py  workflow_engine.py
backend/app/integrations/: ai_provider.py  email_service.py  spreadsheet.py  whatsapp_service.py
backend/app/models/: database.py  schemas.py
backend/app/skills/: __init__.py  (+8 more)
backend/db/: __init__.py  crud.py  schema.sql
backend/exports/: .gitkeep
backend/logs/: .gitkeep
backend/scripts/: create_admin.py  manage_knowledge.py
backend/workflows/: main_graph.py
frontend/: .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.vue  main.ts
vue-vben-admin/: docker-compose.yml
(+57 files in other folders)
