[project]
name = "eric-frank"
version = "0.1.0"
description = "B2B AI Outreach Pipeline — 外贸B端全链路AI自动化获客系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "anthropic>=0.25.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "ddgs>=9.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
